# snake-web-client

./: .gitignore  CLIENT_SPEC.md  Dockerfile  README.md  SERVER_SPEC.md  build.sh
.github/workflows/: static.yml
js/: index.html  package-lock.json  package.json  vite.config.js
js/src/: App.jsx  index.css
js/src/components/: Leaderboard.jsx  Login.css  Login.jsx
rust/: Cargo.toml
rust/src/: error.rs  lib.rs  protocol.rs
