[package]
name = "ferris"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.20"
console_log = "0.2.0"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
thiserror = "1.0.50"
once_cell = "1.18.0"
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
serde_json = "1"

[dependencies.web-sys]
version = "0.3.69"
features = [
    "HtmlCanvasElement",
    "HtmlElement",
    "CssStyleDeclaration",
    "Window",
    "Document",
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
]
